--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -4,7 +4,7 @@
             <!-- sidebar -->
             <img src="assets/img/VFI_logo.svg" alt="admin" class="img-thumbnail rounded mx-auto d-block" />
             <hr />
-            <a class="btn btn-block" style="background-color: #f58000; color:#ffffff" href="./dashboard">Dashboard</a>
+            <a class="btn btn-block" style="background-color: #f58000; color:#ffffff" href="./user/dashboard">Dashboard</a>
             <a class="btn btn-block" style="background-color: #f58000; color:#ffffff" href="./mytasks">My Tasks</a>
             <a class="btn btn-block" style="background-color: #f58000; color:#ffffff" href="./myprojects">My Projects</a>
             <hr />
